fix: add spacing

--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -147,3 +147,7 @@
   visibility: visible;
   border-bottom: 1px solid rgba(55, 53, 47, 0.09);
 }
+
+.spacing {
+  height: 20px;
+}
